fiddling with colors

--- a/termite/.config/termite/config.tmpl
+++ b/termite/.config/termite/config.tmpl
@@ -4,7 +4,7 @@ allow_bold = false
 #bold_is_bright = true
 #clickable_url = true
 #dynamic_title = true
-font = ISOv0.5  12
+font = Inconsolata 12
 geometry = 480x480
 #fullscreen = true
 icon_name = terminal
@@ -51,11 +51,11 @@ color0 = rgba({background.rgb},0.9)
 color8  = rgb({color8.rgb}) 
 
 # red
-color2  = rgb({color1.rgb}) 
+color2  = rgb({color2.rgb}) 
 color10  = rgb({color9.rgb}) 
 
 # green
-color1  = rgb({color2.rgb}) 
+color1  = rgb({color1.rgb}) 
 color9 = rgb({color10.rgb})
 
 # yellow
