ricing - change termite font - rearrange pywal color map - add transparency to termite

--- a/termite/.config/termite/config.tmpl
+++ b/termite/.config/termite/config.tmpl
@@ -4,7 +4,7 @@ allow_bold = false
 #bold_is_bright = true
 #clickable_url = true
 #dynamic_title = true
-font = Inconsolata 13
+font = Recursive Mono Lnr b027st 11
 geometry = 480x480
 #fullscreen = true
 icon_name = terminal
@@ -48,34 +48,34 @@ background      = rgba({background.rgb},0.9)
 
 # black
 color0 = rgba({background.rgb},0.9)
-color8  = rgb({color8.rgb}) 
+color8  = rgb({color8.rgb})
 
 # red
-color2  = rgb({color2.rgb}) 
-color10  = rgb({color9.rgb}) 
+color1  = rgb({color1.rgb})
+color9  = rgb({color9.rgb})
 
 # green
-color1  = rgb({color1.rgb}) 
-color9 = rgb({color10.rgb})
+color2  = rgb({color2.rgb})
+color10 = rgb({color10.rgb})
 
 # yellow
-color3  = rgb({color3.rgb}) 
+color3  = rgb({color3.rgb})
 color11 = rgb({color11.rgb})
 
 # blue
-color4  = rgb({color4.rgb}) 
+color4  = rgb({color4.rgb})
 color12 = rgb({color12.rgb})
 
 # magenta
-color5  = rgb({color5.rgb}) 
+color5  = rgb({color5.rgb})
 color13 = rgb({color13.rgb})
 
 # cyan
-color6  = rgb({color6.rgb}) 
+color6  = rgb({color6.rgb})
 color14 = rgb({color14.rgb})
 
 # white
-color7  = rgb({color7.rgb}) 
+color7  = rgb({color7.rgb})
 color15 = rgb({color15.rgb})
 
 [hints]
